diesel_compile_tests/tests/fail/numeric_ops_require_numeric_column.stderr
error[E0369]: cannot add `users::columns::name` to `users::columns::name`
  --> $DIR/numeric_ops_require_numeric_column.rs:15:31
   |
15 |     let _ = users.select(name + name);
   |                          ---- ^ ---- users::columns::name
   |                          |
   |                          users::columns::name
   |
   = note: an implementation of `std::ops::Add` might be missing for `users::columns::name`
